fix(typo): heros => heroes
