# src/controller/HeroController.ts
@@ -1,7 +1,7 @@
 import { Controller, Get, Path, Route, Header } from 'tsoa';
 import { Hero, AuthHero } from '../interface/Hero';
 import { HeroService } from '../service/HeroService';
-@Route('heros')
+@Route('heroes')
 export class HeroController extends Controller {
   /**
    * Get Hero by hero_id
@@ -24,19 +24,19 @@ export class HeroController extends Controller {
   }
 
   /**
-   * Get all Heros or Heros with profiles
+   * Get all Heroes or Heroes with profiles
    *- If "request.headers" have "name" and "password", it will call verification and return with profile.
    * @param name Auth name
    * @param password Auth password
-   * @returns Heros or Heros with profile
+   * @returns Heroes or Heroes with profile
    */
   @Get()
-  public async getHeros(
+  public async getHeroes(
     @Header('name') name?: string,
     @Header('password') password?: string,
   ): Promise<Hero[] | AuthHero[]> {
     if (name && password) {
-      return await new HeroService().getAuthHeros(String(name), String(password));
+      return await new HeroService().getAuthHeroes(String(name), String(password));
     }
     return await new HeroService().getAll();
   }
